dependencies/zlib-1.3.2/configure.log
--------------------
./configure --static
2026年 3月 5日 星期四 15时52分51秒 CST
Checking for gcc...
=== ztest54690.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c ztest54690.c
... using gcc

Checking for compiler...
=== ztest54690.c ===
int foo() { return 0; }
===
gcc -c ztest54690.c
Checking for obsessive-compulsive compiler options...
=== ztest54690.c ===
int foo() { return 0; }
===
gcc -c -O3 -fPIC ztest54690.c

Building static library libz.a version 1.3.2 with gcc.

=== ztest54690.c ===
#include <stdio.h>
#include <stdlib.h>
size_t dummy = 0;
===
gcc -c -O3 -fPIC ztest54690.c
Checking for size_t... Yes.

=== ztest54690.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest54690.c
ztest54690.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
    2 | off64_t dummy = 0;
      | ^~~~~~~
      | off_t
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/_types/_off_t.h:31:33: note: 'off_t' declared here
   31 | typedef __darwin_off_t          off_t;
      |                                 ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest54690.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
gcc -O3 -fPIC -L/usr/local/opt/openssl@1.1/lib:-L/usr/local/opt/libimobiledevice/lib -L/usr/local/opt/libirecovery/lib -L/usr/local/opt/libplist/lib -L/usr/local/opt/libzip/lib -L/usr/local/opt/curl/lib -L/usr/local/opt/openssl@3/lib -L/usr/local/opt/libusbmuxd/lib -L/usr/local/opt/libxml2/lib -L/usr/local/opt/zlib/lib -o ztest54690 ztest54690.c
ld: warning: search path '/usr/local/opt/openssl@1.1/lib:-L/usr/local/opt/libimobiledevice/lib' not found
ld: warning: search path '/usr/local/opt/libxml2/lib' not found
Checking for fseeko... Yes.

=== ztest54690.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -O3 -fPIC -L/usr/local/opt/openssl@1.1/lib:-L/usr/local/opt/libimobiledevice/lib -L/usr/local/opt/libirecovery/lib -L/usr/local/opt/libplist/lib -L/usr/local/opt/libzip/lib -L/usr/local/opt/curl/lib -L/usr/local/opt/openssl@3/lib -L/usr/local/opt/libusbmuxd/lib -L/usr/local/opt/libxml2/lib -L/usr/local/opt/zlib/lib -o ztest54690 ztest54690.c
ld: warning: search path '/usr/local/opt/openssl@1.1/lib:-L/usr/local/opt/libimobiledevice/lib' not found
ld: warning: search path '/usr/local/opt/libxml2/lib' not found
Checking for strerror... Yes.

=== ztest54690.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -O3 -fPIC ztest54690.c
Checking for unistd.h... Yes.

=== ztest54690.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -O3 -fPIC ztest54690.c
Checking for stdarg.h... Yes.

=== ztest54690.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -O3 -fPIC ztest54690.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest54690.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -O3 -fPIC -L/usr/local/opt/openssl@1.1/lib:-L/usr/local/opt/libimobiledevice/lib -L/usr/local/opt/libirecovery/lib -L/usr/local/opt/libplist/lib -L/usr/local/opt/libzip/lib -L/usr/local/opt/curl/lib -L/usr/local/opt/openssl@3/lib -L/usr/local/opt/libusbmuxd/lib -L/usr/local/opt/libxml2/lib -L/usr/local/opt/zlib/lib -o ztest54690 ztest54690.c
ld: warning: search path '/usr/local/opt/openssl@1.1/lib:-L/usr/local/opt/libimobiledevice/lib' not found
ld: warning: search path '/usr/local/opt/libxml2/lib' not found
Checking for vsnprintf() in stdio.h... Yes.

=== ztest54690.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -O3 -fPIC ztest54690.c
Checking for return value of vsnprintf()... Yes.

=== ztest54690.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -O3 -fPIC ztest54690.c
Checking for attribute(visibility) support... Yes.
=== ztest54690.c ===
#ifndef __s390x__
    #error
#endif
===
gcc -c -O3 -fPIC -DHAVE_HIDDEN ztest54690.c
ztest54690.c:2:6: error: 
    2 |     #error
      |      ^
1 error generated.
(exit code 1)
Checking for s390x build ... No.

ALL = static
AR = libtool
ARFLAGS = -o
CC = gcc
CFLAGS = -O3 -fPIC -DHAVE_HIDDEN
CPP =
EXE =
LDCONFIG = ldconfig
LDFLAGS = -L/usr/local/opt/openssl@1.1/lib:-L/usr/local/opt/libimobiledevice/lib -L/usr/local/opt/libirecovery/lib -L/usr/local/opt/libplist/lib -L/usr/local/opt/libzip/lib -L/usr/local/opt/curl/lib -L/usr/local/opt/openssl@3/lib -L/usr/local/opt/libusbmuxd/lib -L/usr/local/opt/libxml2/lib -L/usr/local/opt/zlib/lib
LDSHARED = gcc
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -O3 -fPIC -DHAVE_HIDDEN
SHAREDLIB =
SHAREDLIBM =
SHAREDLIBV =
STATICLIB = libz.a
TEST = all teststatic
VER = 1.3.2
SRCDIR =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Darwin
HAVE_S390X = 0
HAVE_S390X_VX = 0
VGFMAFLAG =
--------------------


